styles.css
body {
  margin: 0px;
  margin-top: 6vh;
}

.content{
  display: flex;
  flex-direction: column;
  align-items: center;
  
}

.content-boxes {
  display: flex;
  flex-direction: row;
  margin: 1vh;
  flex-wrap: wrap;
}

header {
  margin: 0px;
  padding: 0px;
}

.mission-box {
  background-color: rgba(255, 255, 255, 0.685);
  color:rgba(66, 64, 64, 0.897); 
  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
  font-size: 1.5em;
  text-align: center;
  max-width: 100%;
  background-color: bisque;
  margin: 0.8vh;
  margin-top: 15vw;
  border-radius: 15px;
  padding: 10px;
  display: flex;
  flex-direction: column;
  justify-content: center;
}
.Title {
  color: rgba(39, 38, 38, 0.938);
}

.box {
  margin-bottom: 2vh;
  display: flex;
  justify-content: center;
  max-width: 45vh;
  max-height: 90vw;
  border-radius: 12px;
  overflow: hidden;
}
h1 {
  text-align: center;
}

p{
  text-align: center;
}


.main-page-img {
  display: none;
}

.box-img {
  width: auto;
  height: auto;
  object-fit: contain;
  background-color: rgb(179, 179, 231);
}

.dropdown {
    float: right;
    overflow: hidden;
}


/* FOR PC USERS */
@media only screen and (min-width: 600px) {
  .content {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    width: 100%;
  }

  .cover-card {
    max-height: 600px;
    overflow: hidden;
  }

  .box {
    margin: 4vh;
    max-width: 40vh;
    max-height: 40vw;
  }

  .main-page-img {
    display: block;
    width: 100%;
    object-fit: cover;
    position: relative;
  }

  .intro{
    display: flex;
    align-items: center;
    margin: 22vw;
    margin-top: 2vw;
    margin-bottom: 2vw;
  }

  .mission-box {
    width: 65%;
    border: none;
  }

  .content-boxes {
    background-color: rgba(240, 236, 236, 0.842);
    width: 100%;
    justify-content: center;
    padding: 10px;
  }

}

